# XiaoanNew

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  app.py  environment.yml  mask_inference.py  pyproject.toml  requirements.txt
.github/: AGENTS.md
App_collected_dataset/Xiaoan_datasets/: Readme.md
assets/configs/: default.yaml  scoring_optimized_vlm_p4.yaml  template.yaml  test_config_system.yaml  v2_optimized_p5.yaml  v2_optimized_p6.yaml
assets/prompts/: cv_enhanced_p4_1.yaml  cv_enhanced_p4_2.yaml  cv_enhanced_p4_3.yaml  cv_enhanced_p5.yaml  cv_enhanced_p6.yaml  cv_enhanced_p7.yaml  cv_enhanced_p8.yaml  standard_p2.yaml  standard_p4.yaml  standard_p4_1.yaml  standard_p4_2.yaml  standard_p4_3.yaml  standard_p5.yaml  standard_p8.yaml
config/: __init__.py  settings.py
configs/: scoring_default.yaml  test_config_system.yaml  v2_optimized_p5.yaml  v2_optimized_p6.yaml
data/App_collected_dataset/: record.md
docs/: API.md  BUSINESS_FLOW.md  DATASET_ANALYSIS.md  ENV.md  IDEA.md  PROJECT_STRUCTURE.md  env.md  env_manage.md  idea.md
modules/: __init__.py
modules/config/: __init__.py  settings.py
modules/cv/: __init__.py  image_utils.py  yolov8_inference.py
modules/experiment/: __init__.py  config.py  io.py  metrics.py  scoring.py
modules/prompt/: __init__.py  manager.py
modules/train/yolo/: train_yolov8_seg.py
modules/train/yolo/data/coco/: dataset.yaml
modules/vlm/: __init__.py  client.py  parser.py  retry.py
outputs/contrast_experiments/: EXPERIMENT_REPORT.md
outputs/test_outputs/: last_config.yaml
outputs/test_outputs/exp_20260324_005239_config_system_test/experiment_config.yaml/: experiment_config.yaml
outputs/test_outputs/exp_20260324_005410_config_system_test/: experiment_config.yaml
outputs/test_outputs/exp_20260324_142723_v2_cv_enhanced_p5_optimized/: experiment_config.yaml
outputs/test_outputs/exp_20260324_143430_v2_cv_enhanced_p6_iou_fix/: experiment_config.yaml
outputs/test_outputs/exp_20260324_143445_v2_cv_enhanced_p6_iou_fix/: experiment_config.yaml
outputs/test_outputs/exp_20260324_143453_v2_cv_enhanced_p6_iou_fix/: experiment_config.yaml
outputs/test_outputs/exp_20260324_143500_v2_cv_enhanced_p6_iou_fix/: experiment_config.yaml
outputs/test_outputs/exp_20260324_143510_v2_cv_enhanced_p6_iou_fix/: experiment_config.yaml
outputs/test_outputs/exp_20260324_143518_v2_cv_enhanced_p6_iou_fix/: experiment_config.yaml
outputs/test_outputs/exp_20260324_143529_v2_cv_enhanced_p6_iou_fix/: experiment_config.yaml
prompts/: cv_enhanced_p3_compare.yaml  cv_enhanced_p4.yaml  cv_enhanced_p5.yaml  standard_p3.yaml  standard_p6.yaml  standard_p7.yaml
scripts/: contrast_VLM_CV_test.py  contrast_VLM_CV_test_v2.py  contrast_VLM_test.py  depth_pointcloud_demo.py  experiment_config.py  prompt_manager.py  run_contrast_batch.py  run_contrast_batch_v2.py  scoring_grid_search.py  visualize_pointcloud_gui.py  yolov8_seg_batch.py  yolov8_seg_inference.py
scripts/configs/: default.yaml
scripts/outdate/: VLM_test.py  compare.py  test_Vlm_v2.py  test_prompt.py
scripts/tool/: batch_rotate_images.py  copy_sample_view.py  debug_viewer.py  deploy_new_weights.py  generate_charts.py  labelme2yolo_seg.py  merge_union_masks.py  rescore_experiments.py  sample_view.py  split_yes_dataset.py  view_result_nolabel.py
test_outputs/: leaderboard_top20.csv
tests/: conftest.py  test_cli_and_branches.py  test_config_settings.py  test_coverage_boost.py  test_cv_image_utils.py  test_experiment_config.py  test_experiment_io.py  test_experiment_metrics.py  test_experiment_scoring.py  test_flask_api.py  test_inprocess_cli.py  test_network_resilience.py  test_prompt_manager.py  test_vlm_client.py  test_vlm_parser.py  test_vlm_retry.py
utils/: __init__.py  experiment_io.py  image_utils.py  metrics.py  scoring.py  vlm_client.py  vlm_parser.py
yolo/: train_yolov8_seg.py
